--- a/_posts/2017-08-08-C-part1.md
+++ b/_posts/2017-08-08-C-part1.md
@@ -1,5 +1,5 @@
 ---
-layout: default 
+layout: post 
 title: 编译链接运行 
 categories: [C语言]
 ---
@@ -12,4 +12,3 @@ categories: [C语言]
 让飞机起飞就是我们的运行阶段，中途有可能发动机起火，燃油不够，机头机尾出故障，这时程序就会报异常。或者起飞成功了，
 去的去不是我们的目的地，这就是逻辑错误，若成功起飞还到了正确的目的地，那才说明我们成功运行了。  
 
-<a href="{{ site.baseurl }}/index.html">Go back</a>
