--- a/_posts/mysql/2019-03-12-base.md
+++ b/_posts/mysql/2019-03-12-base.md
@@ -17,14 +17,17 @@ Query OK, 0 rows affected (0.00 sec)
 
 ```
 CREATE DATABASE IF NOT EXISTS {$database} DEFAULT CHARACTER SET utf8;
+
 ```
 
 ###  创建 用户  ###
 
-```CREATE USER 'plus'@'%' IDENTIFIED BY 'plus1111';
+```
+CREATE USER 'plus'@'%' IDENTIFIED BY 'plus1111';
 CREATE USER 'username'@'%' IDENTIFIED BY 'usernamepass111';
 
 GRANT ALL PRIVILEGES ON databasename.* TO 'username'@'%'  WITH GRANT OPTION; 
+
 ```
 
 ### 时区设置 ###
@@ -33,6 +36,7 @@ GRANT ALL PRIVILEGES ON databasename.* TO 'username'@'%'  WITH GRANT OPTION;
 > set global time_zone = '+8:00';  ##修改mysql全局时区为北京时间，即我们所在的东8区
 > set time_zone = '+8:00';  ##修改当前会话时区
 > flush privileges;  #立即生效
+
 ```
 
 ### 添加列 ###
