--- a/_posts/mysql/2019-03-12-base.md
+++ b/_posts/mysql/2019-03-12-base.md
@@ -21,9 +21,8 @@ categories: [mysql]
 
     CREATE USER 'plus'@'%' IDENTIFIED BY 'plus1111';
     CREATE USER 'username'@'%' IDENTIFIED BY 'usernamepass111';
-
+    
     GRANT ALL PRIVILEGES ON databasename.* TO 'username'@'%'  WITH GRANT OPTION; 
-
 
 ### 时区设置 ###
 
@@ -31,7 +30,13 @@ categories: [mysql]
     > set time_zone = '+8:00';  ##修改当前会话时区
     > flush privileges;  #立即生效
 
-
 ### 添加列 ###
 
     alter table t_step_history add column device varchar(10) NOT NULL DEFAULT 'm' COMMENT 'm移动端 pc电脑端' ;
+
+### 关于 NULL ###
+
+```
+Because the result of any arithmetic comparison with NULL is NULL, you cannot obtain any meaningful results from such comparison.
+```
+
