--- a/_posts/Linux/2019-03-12-cmd.md
+++ b/_posts/Linux/2019-03-12-cmd.md
@@ -16,4 +16,10 @@ categories: [linux]
 
 
 
+###  将 jpeg 后缀 改成 jpg
+ls | xargs -n 1 | grep 'jpeg' | awk -F '.' '{print $1}' | xargs -I {} mv {}.jpeg {}.jpg
+
+
+
+
 
