--- a/_posts/mysql/2019-03-12-base.md
+++ b/_posts/mysql/2019-03-12-base.md
@@ -15,6 +15,10 @@ categories: [mysql]
 ###  创建 database  ###
 
 	CREATE DATABASE IF NOT EXISTS {$database} DEFAULT CHARACTER SET utf8;
+	CREATE DATABASE IF NOT EXISTS waibao_plus DEFAULT CHARACTER SET utf8;
+
+
+​	
 
 ###  创建 用户  ###
 
@@ -33,6 +37,10 @@ categories: [mysql]
 ### 添加列 ###
 
     alter table t_step_history add column device varchar(10) NOT NULL DEFAULT 'm' COMMENT 'm移动端 pc电脑端' ;
+
+### 修改列 ###
+
+    alter  table table1 change column1 column1 varchar(100) DEFAULT 1.2 COMMENT '注释';
 
 ### 关于 NULL ###
 
