--- a/_posts/Linux/2019-03-12-cmd.md
+++ b/_posts/Linux/2019-03-12-cmd.md
@@ -20,6 +20,12 @@ categories: [linux]
 ls | xargs -n 1 | grep 'jpeg' | awk -F '.' '{print $1}' | xargs -I {} mv {}.jpeg {}.jpg
 
 
+### 目录的 rwx  代表什么含义?
+目录的 r  代表 是否 可以 列出改目录下文件： ls  dir_path   
+目录的 w  代表 是否 可以 移动目录下文件： mv  dir_path/filename   
+目录的 x  代表 是否 可以 进入该目录： cd  dir_path   
+
+
 
 
 
