--- a/_posts/assembler/2020-03-25-register.md
+++ b/_posts/assembler/2020-03-25-register.md
@@ -96,23 +96,28 @@ categories: [assembler]
 ##### -----8.栈和寄存器SS,SP和指令push,pop
 
 1. ss 栈寄存器  ，sp栈顶偏移寄存器
+
 2. push指令内部执行步骤：
 
    * 根据  ss*16 + sp 找到 栈顶地址
 
    * sp - 2
    * 写入数据 到  ss*16 + sp
+   
 3. pop 指令内部执行步骤
 
    * 根据  ss*16 + sp 找到 栈顶地址
 
    * sp + 2
    * 写入数据 到 ss*16 + sp
+   
 4. 进行push pop 操作前，应该先设置好 ss, sp，使得  ss*16 + sp 指向栈顶
    * 所谓栈顶 为 操作前，栈中已有元素中地址最低元素的地址，操作后会改变
    * 由此可见，当栈中没有元素时，栈顶的 ss*16 + sp地址其实并不属于栈空间，而是 栈空间最高地址 + 1
 
 5. 栈空间是由人为确定的，CPU并不知道。需要我们自己编程注意确保 栈顶 不会超出我们制定的范围
 
-   
+6. pop push 指令只能对 字进行操作
+
+    
 
