--- a/_posts/assembler/2020-04-01-loop.md
+++ b/_posts/assembler/2020-04-01-loop.md
@@ -42,8 +42,9 @@ categories: [assembler]
 
 #####  -----5  定义栈空间  #####
 
-1. `dw` （define words）指令，定义一个字
-2. `db`   (define byte)  指令，定义一个字节
+1. `dw` （define words）伪指令，定义一个字
+2. `db`   (define byte)  伪指令，定义一个字节
+3. `dd` (define  double word ) 伪指令，定义一个字节
 
 3. 多个 段标记,eg:  data,  stack,  code
 
@@ -79,6 +80,7 @@ categories: [assembler]
       
       ```
 
-
-​      
+4. `dup`  操作符，用来重复数据的定义，要和  `dd dw db`结合使用
+   * 如 `db  3 dup  (0) `  ==  `db 0 0 0`
+   * 即： `dd/dw/db  重复的次数 dup (重复双字型数据/字型数据/字节数据)`
 
